# linmath.hpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  linmath.hpp
bench/: bench_no_simd.cpp  bench_simd.cpp
linmath/: libc_integration.hpp  mat.hpp  quat.hpp  vec.hpp
linmath/detail/: feature_detection.hpp  simd_integration.hpp
test/: compile_time.hpp  main.cpp  test_byte_diff.cpp
vs/: lmath.sln  lmath.vcxproj  lmath.vcxproj.filters
